demos/tkg-ingress-nginx/files/template_http_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # --- CONTEXT BASED ROUTING ---
  - host: echoserver.DNS_DOMAIN
    http:
      paths:
      - path: /foo
        backend:
          serviceName: echoserver-1
          servicePort: 8080
      - path: /bar
        backend:
          serviceName: echoserver-2
          servicePort: 8080

  # --- DOMAIN BASED ROUTING ---
  - host: echoserver1.DNS_DOMAIN
    http:
      paths: 
      - backend:
          serviceName: echoserver-1
          servicePort: 8080
  - host: echoserver2.DNS_DOMAIN
    http:
      paths: 
      - backend:
          serviceName: echoserver-2
          servicePort: 8080
