demos/tkg-ingress-nginx/files/template_https_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: https-secret
    hosts:
      - echoserver.DNS_DOMAIN
      - echoserver1.DNS_DOMAIN
      - echoserver2.DNS_DOMAIN
  rules:
  - host: echoserver1.DNS_DOMAIN
    http:
      paths:
      - backend:
          serviceName: echoserver-1
          servicePort: 8080
  - host: echoserver2.DNS_DOMAIN
    http:
      paths:
      - backend:
          serviceName: echoserver-2
          servicePort: 8080
